# silero_openai_tts

./: .env.example  .gitignore  LICENSE  README.md  README_RU.md  bootstrap.py  pyproject.toml
app/: cli.py  main.py  settings.py
app/api/: routes_tts.py  schemas.py
app/audio/: cache.py  concat.py  encode.py  player.py
app/text/: language_router.py  morph.py  normalize.py  numbers.py  transliterate.py
app/tts/: engine.py  voices.py
silero_openai_tts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: big_test_tts_api.py  conftest.py  test_api_tts.py  test_engine_model_cache.py  test_language_router.py  test_normalize.py  test_transliterate.py
